--- a/src/main/Frontend/package.json
+++ b/src/main/Frontend/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "bootstrap": "^5.2.3",
+    "chart.js": "^3.9.1",
     "pinia": "^2.0.28",
     "vue": "^3.2.45",
+    "vue-chart-3": "^3.1.8",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
